force-app/main/default/objects/b3d__Submitter__c/b3d__Submitter__c.object-meta.xml
<CustomObject>
    <label>Submitter</label>
    <nameField>
        <displayFormat>SUBMITTER-{0}</displayFormat>
        <label>Submitter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submitters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>