force-app/main/default/objects/b3d__Submitter__c/fields/b3d__Browser_Language__c.field-meta.xml
<CustomField>
    <fullName>b3d__Browser_Language__c</fullName>
    <label>Browser Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>