force-app/main/default/objects/b3d__Submitter__c/fields/b3d__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3d__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Submitters</relationshipLabel>
    <relationshipName>Submitters</relationshipName>
    <type>Lookup</type>
</CustomField>