force-app/main/default/objects/b3d__Submitter__c/fields/b3d__IP_Address__c.field-meta.xml
<CustomField>
    <fullName>b3d__IP_Address__c</fullName>
    <label>IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>