force-app/main/default/objects/b3d__Submitter__c/fields/b3d__Opened_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>b3d__Opened_Timestamp__c</fullName>
    <label>Opened Timestamp</label>
    <type>DateTime</type>
</CustomField>