force-app/main/default/objects/b3d__Submitter__c/fields/b3d__Order__c.field-meta.xml
<CustomField>
    <fullName>b3d__Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>