force-app/main/default/objects/b3d__Submitter__c/fields/b3d__Status__c.field-meta.xml
<CustomField>
    <fullName>b3d__Status__c</fullName>
    <formula>IF(NOT(ISNULL(b3d__Rejected_Timestamp__c)), &apos;Rejected&apos;, IF(NOT(ISNULL( b3d__Signed_Timestamp__c  )) , &apos;Signed&apos;, IF(NOT(ISNULL( b3d__Opened_Timestamp__c )) , &apos;Opened&apos;, &apos;New&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>