force-app/main/default/objects/b3d__Submitter__c/fields/b3d__Submission_Request__c.field-meta.xml
<CustomField>
    <fullName>b3d__Submission_Request__c</fullName>
    <label>Submission Request</label>
    <referenceTo>b3d__Submission_Request__c</referenceTo>
    <relationshipLabel>Submitters</relationshipLabel>
    <relationshipName>Submitters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>