force-app/main/default/objects/b3d__Submitter__c/fields/b3d__Submit_URL__c.field-meta.xml
<CustomField>
    <fullName>b3d__Submit_URL__c</fullName>
    <formula>b3d__Submission_Request__r.b3d__Document__r.b3d__Site__c  &amp; &quot;/apex/b3d__Submit?templateId=&quot; &amp;  b3d__Submission_Request__r.b3d__Document__c &amp; &quot;&amp;submitterId=&quot; &amp; Id &amp; &quot;&amp;recordId=&quot; &amp;  b3d__Submission_Request__r.b3d__Record_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit URL</label>
    <type>Text</type>
</CustomField>