force-app/main/default/objects/b3d__Submitter__c/fields/b3d__Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>b3d__Submitter_Email__c</fullName>
    <inlineHelpText>If we have not identified the Contact in advance, the submitter will be asked to provide their email.</inlineHelpText>
    <label>Submitter Email</label>
    <type>Email</type>
</CustomField>