force-app/main/default/objects/b3d__Submitter__c/fields/b3o__Document__c.field-meta.xml
<CustomField>
    <fullName>b3o__Document__c</fullName>
    <formula>b3d__Submission_Request__r.b3d__Document__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document</label>
    <type>Text</type>
</CustomField>